# markor

./: index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: editor-and-preview.tsx  editor.tsx  markdown-preview.css  preview.tsx  title-bar-button.tsx  title-bar.tsx
src/hooks/: use-shortcut.ts
